feat: docker config and user routes
